[project]
name = "github-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "fastapi",
    "httpx",
    "python-dotenv",
    "uvicorn",
    "attrs",
    "anyio",
    "certifi",
    "click",
    "colorama",
    "h11"
]
